--- a/Assignments/usemap.html
+++ b/Assignments/usemap.html
@@ -12,12 +12,12 @@
     
         <img src="./images/food.jpg" alt="food" usemap="#mapname" width="1024px" height="399px">
         <map name="mapname">
-            <area shape="circle" coord="979,165,156"
+            <area shape="circle" coords="979,165,156"
                 href="https://www.google.com/search?q=pizza&rlz=1C1CHBF_enIN958IN958&sxsrf=AJOqlzXh8nUlPucvb50NB6Qx6YzStsCmTg:1677261021447&source=lnms&tbm=isch&sa=X&ved=2ahUKEwih2YOb3K79AhUtZWwGHcbUAvoQ_AUoAXoECAIQAw&biw=1366&bih=617&dpr=1"
                 alt="Pizza">
-            <!-- <area shape="circle" coord="39,204,139"
+            <area shape="circle" coords="39,204,142"
                 href="https://www.google.com/search?q=pizza&rlz=1C1CHBF_enIN958IN958&sxsrf=AJOqlzXh8nUlPucvb50NB6Qx6YzStsCmTg:1677261021447&source=lnms&tbm=isch&sa=X&ved=2ahUKEwih2YOb3K79AhUtZWwGHcbUAvoQ_AUoAXoECAIQAw&biw=1366&bih=617&dpr=1"
-                alt="Pizza"> -->
+                alt="Pizza">
         </map>
     
     <!-- <map name="mapdata">
