--- a/MajorProject/HTML_Major/register.html
+++ b/MajorProject/HTML_Major/register.html
@@ -21,9 +21,10 @@
                 <a href="about.html">About Us</a>
             </div>
             <div style="padding-top: 25px;">
-                <form action="https://www.google.com">
-                    <input type="search" style="width: 100%;" placeholder="search here">
+                <form action="https://www.google.com/search">
+                    <input type="text" style="width: 100%;" placeholder="search here" name="q">
                     <input type="submit" value="Search">
+                    <!-- <button>click</button> -->
                 </form>
             </div>
             <div style="padding-top: 25px;">
