--- a/Assignments/task18animate-square.html
+++ b/Assignments/task18animate-square.html
@@ -23,7 +23,7 @@
             animation-duration: 2s;
             animation-iteration-count: infinite;
             animation-direction: alternate-reverse;
-            animation-delay: 5s;
+            /* animation-delay: 5s; */
         }
 
         @keyframes jk {
